# a-throwaway-qt-app

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  deploywin32.bat  deploywin64.bat
src/: resources.qrc
src/code/: extra_fonts.hpp  main.cpp
src/code/database/: database.cpp  database.hpp
src/code/database/errors/: errors.cpp  errors.hpp
src/code/transaction/: transaction.cpp  transaction.hpp
src/code/validators/: date_validator.cpp  date_validator.hpp  date_validator_tests.cpp  validators.cpp  validators.hpp
src/gui/: qtquickcontrols2.conf
src/gui/mainwindow/: mainwindow.qml
src/res/: fonts.qrc
